--- a/09fastapiORM/02进阶部分/增删改查操作/笔记.md
+++ b/09fastapiORM/02进阶部分/增删改查操作/笔记.md
@@ -162,12 +162,21 @@ async def get_stu(id: int):
 
 ## 查询脚本
 ```python
-async def get_allstudent(id:int|None=None):
-    if id:
-        stu=await Student.filter(id=id).first()
-        return stu
-    allstu=await Student.all()
+#tips:获取单条数据
+async def get_stu(id:int)->Student:
+    stu = await Student.get(id=id)
+    return stu
+
+#tips:获取多条数据
+async def get_allstu(name:str)->list[Student]:
+    allstu=await Student.filter(name=name).all()
     return allstu
+#tips:获取所有数据
+async def get_allstu(id:int)->list[Student]:
+    allstu  = await Student.all()
+    return allstu
+    
+
 ```
 ## 查询接口
 ```python
