--- a/09fastapiORM/02进阶部分/增删改查操作/笔记.md
+++ b/09fastapiORM/02进阶部分/增删改查操作/笔记.md
@@ -239,3 +239,44 @@ async def update_stu(form: UpdateStudentForm):
     return {"status": True, "message": f"学生 {updated.name} 更新成功", "data": updated}
 
 ```
+
+
+## 模糊查询
+```python
+#tips:模糊查询
+async def get_student(name:str):
+    stu=await Student.filter(name__contains=name)
+    return stu
+#tips:多条件模糊查询
+async def get_allstudent(name:str,age:int)->list[Student]:
+    stu=await Student.filter(name__contains=name,age=age).all()
+    return stu
+
+async def getstus():
+    stus=await Student.filter(id__gt=1).all() #tips：查询学生id>1的所有学生
+    return stus 
+async def getsturange():
+    stus=await Student.filter(id__range=[2,80]) #tips:查询id从2-80的所有学生
+    return stus
+async def getstuin():
+    stus=await Student.filter(id__in=[2,3,89])   #tips:查询id为2,3,89的三名学生
+    return stus 
+
+```
+
+## 单列数据查询
+```python
+async def getname():
+    stu=await Student.all().values('name')
+    return stu #返回的是一个列表包含的字典
+```
+>  返回的类型是这样的[{'name':'xxx'},{'name':'xxx'}]
+> 
+## 多列数据查询
+```python
+async def getname():
+    stu=await Student.all().values('name','age')
+    return stu #返回的是一个列表包含的字典
+```
+
+>  返回的类型是这样的[{'name':'xxx','age':18},{'name':'xxx','age':34}]
