--- a/09fastapiORM/03高阶部分/02CRUD操作/笔记.md
+++ b/09fastapiORM/03高阶部分/02CRUD操作/笔记.md
@@ -85,7 +85,7 @@ class Student(Model):
 class StudentProfile(Model):
     pfid:int=fields.IntField(pk=True)
     address:str=fields.CharField(max_length=50) #档案保存地址
-    phonenum:str=fields.IntField(validators=[phonevalidator])
+    phonenum:str=fields.CharField(validators=[phonevalidator])
 
 ```
 >  需要注意一点可能是会报错的，因为创建表的一对一关系的时候我们没有设置Student的profile为空   
@@ -104,7 +104,7 @@ await Student.create(
 class Student(Model):
     stuid: int = fields.IntField(pk=True)
     name: str = fields.CharField(max_length=50)
-    age: int = fields.IntField(validators=[agevalidator, ])
+    age: int = fields.charField(validators=[agevalidator, ])
     profile: str = fields.OneToOneField('models.StudentProfile', on_delete=fields.CASCADE, related_name='student',
                                         null=True)
 
