--- a/15ORM_sqlalchemy_alembic/04Session相关操作/笔记.md
+++ b/15ORM_sqlalchemy_alembic/04Session相关操作/笔记.md
@@ -296,6 +296,8 @@ session.execute(statment2)
 6. 取反操作符  `~`  .where(~语句)
 7. .is_(None) .isnot(None)  判空操作
 8. 聚合函数 （不能用在where中,注意⚠️）
+9. 分组查询 groupby
+10. 排序操作
 - like以及and_的用法
 ```python
 #查询员工的名字中包含'四',并且薪资大于2000的员工
@@ -381,3 +383,59 @@ print(hieste)
 
 
 ```
+--- 
+
+- 分页查询的用法
+```python
+ # limit函数可以限制查询的时候只查询前几行数据,属于top-N操作
+        # offset函数可以限制查找数据的时候过滤前面多少条，可指定开始查询时的偏移量
+
+        #tips:查询前三条数据
+        top3 = session.execute(select(Employee).offset(0).limit(3)).scalars().all()
+        for emp in top3:
+            print(emp)
+```
+
+```bash
+张一,2000.00,600,GenderValue.MALE
+kaven,2000.00,300,GenderValue.FEMALE
+李四,5000.00,300,GenderValue.FEMALE
+```
+
+
+- 升降序排序
+
+```python
+# important:排序,默认升序
+lesssalary = session.execute(select(Employee).order_by(Employee.salary).limit(3)).scalars()
+for emp in lesssalary:
+    print(emp)
+# tips:降序
+
+highrank = session.execute(select(Employee).order_by(Employee.salary.desc()).limit(3)).scalars()
+for emp in highrank:
+    print(emp)
+```
+
+- 分组查询
+group_by(字段) 以该字段进行分组
+```python
+  #important:分组查询,查询有多少男性,并以id进行分组
+        allmale = session.execute(select(Employee.gender,func.count(Employee.id)).group_by(Employee.gender)).all()
+        for o in allmale:
+            print(type(o))
+            print(o)
+            print(o.gender.value,o.count) #tips:前一个参数拿到的是性别枚举类的值,后面拿到的是其数量
+
+```
+
+```bash
+<class 'sqlalchemy.engine.row.Row'>
+(<GenderValue.MALE: '男'>, 1)
+男 1
+<class 'sqlalchemy.engine.row.Row'>
+(<GenderValue.FEMALE: '女'>, 3)
+女 3
+```
+
+- 分组后聚合,就是以前学mysql那时一样的理念，分组后的数据需要用.having(where语句)来进行分组后聚合
