--- a/15ORM_sqlalchemy_alembic/多表关系.md
+++ b/15ORM_sqlalchemy_alembic/多表关系.md
@@ -294,3 +294,121 @@ async def delete_user(user_id: int, session: AsyncSession = Depends(get_session)
 这个示例展示了 **真实项目中常见的关联操作**。你可以根据需求调整级联行为、是否预加载等。
 
 需要我补充 **“更新多对多关系”** 或 **“分页查询带关联数据”** 的示例吗？欢迎继续提问！😊
+
+
+
+---
+
+## backref和back_populates是反过来么？？
+
+你的观察非常敏锐！👏  
+但其实 **不是“反过来”**，而是 **两者根本不在同一个“维度”上操作**。让我用最清晰的方式帮你彻底厘清：
+
+---
+
+## ✅ 核心结论（先说答案）
+
+> **`backref` 和 `back_populates` 都是指向「对方模型中的属性名」**，  
+> **它们指向的目标是一致的！**  
+> 只是 **`backref` 会自动创建那个属性，而 `back_populates` 要求你手动先创建好。**
+
+所以 **不是“反过来”，而是“一个自动建，一个手动建”**。
+
+---
+
+## 🧩 举个具体例子（关键！）
+
+假设我们想要：
+- `Employee` 有个属性叫 `department`（指向一个部门）
+- `Department` 有个属性叫 `employees`（指向多个员工）
+
+### 方式一：用 `backref`（旧版，Flask 常见）
+```python
+class Employee(Base):
+    department = relationship("Department", backref="employees")
+    #                                     ↑↑↑↑↑↑↑↑↑↑↑↑↑↑
+    #                                     这里写的 "employees" 是你希望在 Department 类上**自动创建的属性名**
+```
+
+✅ 效果：
+- SQLAlchemy 自动给 `Department` 加了一个 `employees` 属性
+- 所以 `dept.employees` 能用
+
+> 🔍 **`backref="employees"` 的意思是：**  
+> “请在关联的 `Department` 模型上，**创建一个叫 `employees` 的反向属性**”
+
+---
+
+### 方式二：用 `back_populates`（SQLAlchemy 2.0 推荐）
+```python
+# 先在 Employee 中定义
+class Employee(Base):
+    department = relationship("Department", back_populates="employees")
+    #                                                  ↑↑↑↑↑↑↑↑↑↑↑↑↑↑
+    #                                                  这里写的 "employees" 是 **已经存在于 Department 中的属性名**
+
+# 再在 Department 中定义
+class Department(Base):
+    employees = relationship("Employee", back_populates="department")
+    #                                                 ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑
+    #                                                 这里写的 "department" 是 **已经存在于 Employee 中的属性名**
+```
+
+✅ 效果：
+- 双方都显式声明了关系
+- `back_populates` 只是**告诉 SQLAlchemy：“这两个属性是一对，请把它们连起来”**
+
+> 🔍 **`back_populates="employees"` 的意思是：**  
+> “我知道 `Department` 里已经有一个叫 `employees` 的 `relationship`，请把它和我配对”
+
+---
+
+## 🔄 对比图解
+
+| 操作 | `backref` | `back_populates` |
+|------|----------|------------------|
+| **目标** | 在对方类上创建一个新属性 | 连接两个已存在的属性 |
+| **写在哪一方** | 只需写在一方 | 必须双方都写 |
+| **字符串值含义** | “我要在对方创建的属性叫什么” | “对方已经存在的属性叫什么” |
+| **是否自动创建** | ✅ 是 | ❌ 否 |
+
+> 💡 所以：**字符串内容是一样的（都是对方的属性名）**，只是行为不同！
+
+---
+
+## ❌ 为什么你会觉得“反过来”？
+
+可能是因为你这样理解：
+- `backref='employees'` → “我在 Employee 里写，却写了 Department 的名字”
+- `back_populates='employees'` → “我也在 Employee 里写，也写了 Department 的名字”
+
+→ 其实**两边写的都是同一个东西：对方的属性名！**
+
+**并没有反过来！**
+
+---
+
+## ✅ 正确记忆方式
+
+> 无论用 `backref` 还是 `back_populates`，  
+> **引号里的名字，永远是你希望（或已经存在）在「对方模型」中使用的属性名。**
+
+| 当前模型 | 引号里的名字 | 对应到 |
+|--------|------------|-------|
+| `Employee` | `"employees"` | `Department.employees` |
+| `Department` | `"department"` | `Employee.department` |
+
+---
+
+## 🎯 一句话总结
+
+> **`backref` = “帮我创建 + 连接”**  
+> **`back_populates` = “我已经创建好了，请连接”**  
+> **但两者引号里的名字，指的都是「对方的属性名」——完全一致，没有反过来！**
+
+---
+
+现在你应该可以自信地说：  
+> “哦！原来 `backref` 和 `back_populates` 指向的是同一个方向，只是自动化程度不同罢了！” 😎
+
+如果还有疑惑，欢迎继续问！
