--- a/15ORM_sqlalchemy_alembic/04Session相关操作/笔记.md
+++ b/15ORM_sqlalchemy_alembic/04Session相关操作/笔记.md
@@ -1,4 +1,7 @@
-from sqlalchemy.orm import sessionmaker# Session操作
+本节代码均在03alembic的代码当中,查看即可   
+
+from sqlalchemy.orm import sessionmaker  
+# Session操作
 ---
 ## 创建Session对象的两种方式
 
