--- a/15ORM_sqlalchemy_alembic/08定义schema与创建session依赖注入/笔记.md
+++ b/15ORM_sqlalchemy_alembic/08定义schema与创建session依赖注入/笔记.md
@@ -83,22 +83,22 @@ emp_apirt = APIRouter(prefix='/api/employee',tags=['员工管理'])
 async def getemp():
     pass
 
-@emp_apirt.post('/emp/')
-async def create_emp(employee:Empschema,session:Annotated[Session,Depends(get_session)]):
-    #step1:先判断数据库中有没有重复的数据,即先进行查询
-    is_emp =  session.execute(Select(Employee.name).where(Employee.name==employee.name)).first() #important:注意这里必须返回值,这里用.first()
-    if is_emp: #tips:如果不为空,即已存在重复名字的员工
-        raise HTTPException(status_code=405,detail='重复录入,已经存在该员工的信息')
+@emp_apirt.post('/emp/', description='添加员工', response_model=Empschema)
+async def create_emp(employee: Empschema, session: Annotated[Session, Depends(get_session)]):
+    # step1:先判断数据库中有没有重复的数据,即先进行查询
+    is_emp = session.execute(Select(Employee.name).where(Employee.name == employee.name)).first()
+    if is_emp:  # tips:如果不为空,即已存在重复名字的员工
+        raise HTTPException(status_code=405, detail='重复录入,已经存在该员工的信息')
 
-    #tips:需要把Pydantic的模型对象(Empschema)转换为ORM的模型对象(Employee),
-    #important:所以为了解决这个问题,我们刚才在定义Empschema的时候重写了Config将其设置为了from_attributes=True
-    db_emp = Employee(**employee.model_dump()) #tips:这里和tortoiseorm差不多
-    #tips:其实这里就跟curd操作当中创建员工对象的操作是一样的,就是新建一个员工对象然后**employee.model_dump()就是解包赋值
+    # tips:需要把Pydantic的模型对象(Empschema)转换为ORM的模型对象(Employee),
+    # important:所以为了解决这个问题,我们刚才在定义Empschema的时候重写了Config将其设置为了from_attributes=True
+    db_emp = Employee(**employee.model_dump())  
+    # important:这里和tortoiseorm差不多,employee是pydantic类型,用.model_dump是转换成字典
+    #  然后**employee.model_dump()就是解包赋值
 
     session.add(db_emp)
-    session.commit()  #important:之前我们使用的是sessionmaker来做的,所以会自动提交,但这次是我们手动管理session,所以需要提交
-
-
+    session.commit()  # important:之前我们使用的是sessionmaker来做的,所以会自动提交,但这次是我们手动管理session,所以需要提交
+    return db_emp
 
 
 ```
@@ -207,3 +207,25 @@ async def getall_emps(session: Annotated[Session, Depends(get_session)],offset:i
 
 ```
 
+## 修改操作  
+一定要注意传入的`exclude_unset`,它可以只将我们需要更新的属性进行更新,别的不动 ⚠️⚠️
+```python   
+# tips:修改员工信息,通过id进行修改
+
+@emp_apirt.put('/emp/{id}', response_model=Empschema)
+async def mofy_emp(id:Annotated[int,Path(description='员工id')],session:Annotated[Session,Depends(get_session)],employee:Empschema):
+    employee.id=id  #tips:因为不对id进行修改,所以这里直接先给其赋值
+    target_emp = session.execute(Select(Employee.name).where(Employee.id  == id)).first()
+    if target_emp==None:
+        raise HTTPException(status_code=405,detail='未查讯到员工信息,请检查id')
+    session.execute(update(Employee),[employee.model_dump(exclude_unset=True)]) 
+    #important:这里不理解的话可以去看04session相关操作的笔记,model_dump()是把pydantic模型所有的属性转换为字典
+    # 但是在做更新操作中可能某些属性并不用更新,如果不加上排除未设置属性,那么它将会修改我们并不需要更新的属性
+    #tips:修改后要提交
+    session.commit()
+
+    #tips:然后返回修改后的数据方便查看结果
+    db_emp = session.get(Employee,id)
+    return db_emp
+
+```
